force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <description>CCS Agile Development User Story Object</description>
    <label>User Story</label>
    <nameField>
        <displayFormat>US{0000}</displayFormat>
        <label>User Story</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>