force-app/main/default/objects/User_Story__c/fields/Actual_Size__c.field-meta.xml
<CustomField>
    <fullName>Actual_Size__c</fullName>
    <label>Actual Size</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>