force-app/main/default/objects/User_Story__c/fields/Implementation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Strategy__c</fullName>
    <label>Implementation Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>