force-app/main/default/objects/User_Story__c/fields/New_Story_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Story_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden checkbox for new story email</description>
    <label>New Story Email</label>
    <type>Checkbox</type>
</CustomField>