force-app/main/default/objects/User_Story__c/fields/QA_UAT_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>QA_UAT_Sign_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA/UAT Sign Off</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories_SignOff</relationshipName>
    <type>Lookup</type>
</CustomField>