force-app/main/default/objects/User_Story__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>US_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Awaiting Sizing</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>New Story</fullName>
            </value>
            <value>
                <fullName>Not Possible</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Refinement</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Ready for PreProd</fullName>
            </value>
            <value>
                <fullName>PreProd Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Ready for Production</fullName>
            </value>
            <value>
                <fullName>Ready for QA</fullName>
            </value>
            <value>
                <fullName>Training Requirement</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Testing Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>