force-app/main/default/objects/User_Story__c/fields/US_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>US_Approval_Status__c</fullName>
    <description>US0548 - SPRINT v2</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Review Approved</fullName>
            </value>
            <value>
                <fullName>Business Review Rejected</fullName>
            </value>
            <value>
                <fullName>QA-UAT Accepted</fullName>
            </value>
            <value>
                <fullName>QA-UAT Rejected</fullName>
            </value>
            <value>
                <fullName>Production UAT Approved</fullName>
            </value>
            <value>
                <fullName>Production UAT Rejected</fullName>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>