force-app/main/default/objects/User_Story__c/fields/US_Approver__c.field-meta.xml
<CustomField>
    <fullName>US_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US0548 - Sprint v2</description>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stories_SignOff2</relationshipName>
    <type>Lookup</type>
</CustomField>