force-app/main/default/objects/User_Story__c/fields/US_Blocked__c.field-meta.xml
<CustomField>
    <fullName>US_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>