force-app/main/default/objects/User_Story__c/fields/US_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>US_Business_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>