force-app/main/default/objects/User_Story__c/fields/US_Case__c.field-meta.xml
<CustomField>
    <fullName>US_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>