force-app/main/default/objects/User_Story__c/fields/US_Category__c.field-meta.xml
<CustomField>
    <fullName>US_Category__c</fullName>
    <description>US560 - Sprint v2</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPIC</fullName>
            </value>
            <value>
                <fullName>Hot Fix (D2P)</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Low Risk (D2P)</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Tweak</fullName>
            </value>
            <value>
                <fullName>Investigation Spike</fullName>
            </value>
            <value>
                <fullName>System Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>