force-app/main/default/objects/User_Story__c/fields/US_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>US_Deployment_Date__c</fullName>
    <description>US0548 - Sprint v2</description>
    <formula>US_Sprint__r.Sprint_Deployment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Date</label>
    <type>Date</type>
</CustomField>