force-app/main/default/objects/User_Story__c/fields/US_Has_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>US_Has_Test_Script__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US0548 - Sprint v2</description>
    <label>Has Test Script</label>
    <type>Checkbox</type>
</CustomField>