force-app/main/default/objects/User_Story__c/fields/US_MOSCOW__c.field-meta.xml
<CustomField>
    <fullName>US_MOSCOW__c</fullName>
    <label>MOSCOW</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must</fullName>
            </value>
            <value>
                <fullName>Should</fullName>
            </value>
            <value>
                <fullName>Could</fullName>
            </value>
            <value>
                <fullName>Wont</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>