force-app/main/default/objects/User_Story__c/fields/US_Plan_Estimate__c.field-meta.xml
<CustomField>
    <fullName>US_Plan_Estimate__c</fullName>
    <label>Plan Estimate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>