force-app/main/default/objects/User_Story__c/fields/US_Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>US_Product_Manager__c</fullName>
    <description>US0548 - Sprint v2</description>
    <label>Product Manager</label>
    <type>Email</type>
</CustomField>