force-app/main/default/objects/User_Story__c/fields/US_Sign_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>US_Sign_Off_Date__c</fullName>
    <description>US0548 - Sprint v2</description>
    <formula>US_Deployment_Date__c  + 2</formula>
    <label>Sign Off Date</label>
    <type>Date</type>
</CustomField>