force-app/main/default/objects/User_Story__c/fields/US_Sprint__c.field-meta.xml
<CustomField>
    <fullName>US_Sprint__c</fullName>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>