force-app/main/default/objects/User_Story__c/fields/US_Status__c.field-meta.xml
<CustomField>
    <fullName>US_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In-Development</fullName>
            </value>
            <value>
                <fullName>In Testing</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Business Acceptace</fullName>
                <isActive>false</isActive>
                <label>Business Acceptace</label>
            </value>
            <value>
                <fullName>Business Review</fullName>
                <isActive>false</isActive>
                <label>Business Review</label>
            </value>
            <value>
                <fullName>Defined</fullName>
                <isActive>false</isActive>
                <label>Defined</label>
            </value>
            <value>
                <fullName>In-QA</fullName>
                <isActive>false</isActive>
                <label>In-QA</label>
            </value>
            <value>
                <fullName>New Story</fullName>
                <isActive>false</isActive>
                <label>New Story</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Three Amigos</fullName>
                <isActive>false</isActive>
                <label>Three Amigos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>