force-app/main/default/objects/User_Story__c/fields/US_Story_Detail__c.field-meta.xml
<CustomField>
    <fullName>US_Story_Detail__c</fullName>
    <label>Story Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>