force-app/main/default/objects/User_Story__c/fields/US_Subject__c.field-meta.xml
<CustomField>
    <fullName>US_Subject__c</fullName>
    <label>Subject</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>