force-app/main/default/objects/User_Story__c/fields/US_Task_Estimate__c.field-meta.xml
<CustomField>
    <fullName>US_Task_Estimate__c</fullName>
    <label>Task Estimate</label>
    <summarizedField>Sprint_Task__c.Sprint_Task_Estimate__c</summarizedField>
    <summaryForeignKey>Sprint_Task__c.Sprint_Task_User_Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>