force-app/main/default/objects/User_Story__c/fields/US_Tester__c.field-meta.xml
<CustomField>
    <fullName>US_Tester__c</fullName>
    <description>US0548 - Sprint v2</description>
    <label>Tester</label>
    <length>80</length>
    <type>Text</type>
</CustomField>