force-app/main/default/objects/User_Story__c/fields/US_Training_Requirements__c.field-meta.xml
<CustomField>
    <fullName>US_Training_Requirements__c</fullName>
    <description>US0548 - Sprint v2</description>
    <label>Training Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>