force-app/main/default/objects/User_Story__c/fields/US_User_Story__c.field-meta.xml
<CustomField>
    <fullName>US_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Related Stories &amp; Defects</relationshipLabel>
    <relationshipName>US_Defects</relationshipName>
    <type>Lookup</type>
</CustomField>