force-app/main/default/objects/User_Story__c/recordTypes/US_Defect.recordType-meta.xml
<RecordType>
    <fullName>US_Defect</fullName>
    <active>true</active>
    <description>User Story Defect</description>
    <label>Defect</label>
</RecordType>