force-app/main/default/objects/User_Story__c/recordTypes/US_User_Story.recordType-meta.xml
<RecordType>
    <fullName>US_User_Story</fullName>
    <active>true</active>
    <description>General User Story for Development</description>
    <label>User Story</label>
</RecordType>