force-app/main/default/objects/User_Story__c/validationRules/US_Blocked_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Blocked_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>US_Blocked__c = TRUE &amp;&amp; ISBLANK(Reason__c )  ||  Reason__c  = &quot;-&quot;</errorConditionFormula>
    <errorDisplayField>US_Blocked__c</errorDisplayField>
    <errorMessage>Please enter a reason for blocking this User Story</errorMessage>
</ValidationRule>