force-app/main/default/objects/User_Story__c/listViews/All_Defects.listView-meta.xml
<ListView>
    <fullName>All_Defects</fullName>
    <columns>RECORDTYPE</columns>
    <columns>US_Blocked__c</columns>
    <columns>NAME</columns>
    <columns>US_MOSCOW__c</columns>
    <columns>US_Subject__c</columns>
    <columns>US_Plan_Estimate__c</columns>
    <columns>US_Status__c</columns>
    <columns>Stage__c</columns>
    <columns>US_Category__c</columns>
    <columns>US_Business_Owner__c</columns>
    <columns>US_Developer__c</columns>
    <columns>US_Tester__c</columns>
    <columns>US_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>User_Story__c.US_Defect</value>
    </filters>
    <label>All Defects</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>