force-app/main/default/objects/User_Story__c/listViews/BAU_Backlog.listView-meta.xml
<ListView>
    <fullName>BAU_Backlog</fullName>
    <columns>RECORDTYPE</columns>
    <columns>US_User_Story__c</columns>
    <columns>NAME</columns>
    <columns>US_Subject__c</columns>
    <columns>Stage__c</columns>
    <columns>US_Blocked__c</columns>
    <columns>Reason__c</columns>
    <columns>US_Business_Owner__c</columns>
    <columns>US_Developer__c</columns>
    <columns>US_MOSCOW__c</columns>
    <columns>US_Sprint__c</columns>
    <columns>US_Status__c</columns>
    <columns>US_Plan_Estimate__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>US_Sprint__c</field>
        <operation>equals</operation>
        <value>BAU Backlog</value>
    </filters>
    <label>BAU Backlog</label>
    <sharedTo>
        <group>CCS_Development_BAU</group>
        <group>CCS_Development_View_Only</group>
    </sharedTo>
</ListView>