force-app/main/default/objects/User_Story__c/listViews/BAU_Wont_Have.listView-meta.xml
<ListView>
    <fullName>BAU_Wont_Have</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>US_Subject__c</columns>
    <columns>US_Business_Owner__c</columns>
    <columns>US_Developer__c</columns>
    <columns>US_MOSCOW__c</columns>
    <columns>US_Sprint__c</columns>
    <columns>US_Status__c</columns>
    <columns>US_Plan_Estimate__c</columns>
    <columns>Stage__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>US_Sprint__c</field>
        <operation>equals</operation>
        <value>Won&apos;t Have</value>
    </filters>
    <label>BAU Wont Have</label>
    <sharedTo>
        <group>CCS_Development_BAU</group>
    </sharedTo>
</ListView>