force-app/main/default/objects/User_Story__c/listViews/Sprint_R2.listView-meta.xml
<ListView>
    <fullName>Sprint_R2</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>US_Subject__c</columns>
    <columns>US_Plan_Estimate__c</columns>
    <columns>US_Business_Owner__c</columns>
    <columns>US_Developer__c</columns>
    <columns>US_MOSCOW__c</columns>
    <columns>US_Sprint__c</columns>
    <columns>US_Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>US_Sprint__c</field>
        <operation>equals</operation>
        <value>Sprint R</value>
    </filters>
    <label>Sprint R (July)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>CCS_Development_BAU</group>
    </sharedTo>
</ListView>